Final Hidden Search

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Hidden Search</title>
   </head>
   <body>
+    <div class="heading-txt"><h1>Cool Search</h1></div>
     <div class="search">
       <input type="text" class="input" placeholder="Search...">
       <button class="btn">
